[Backport 2.x] Clean up miscellaneous code smells, eliminate most Guava use (#327) (#332)
Clean up miscellaneous code smells, eliminate most Guava use (#327)

Clean up misc. code smells, eliminate most Guava use

Signed-off-by: Daniel Widdis <widdis@gmail.com>